Working Calendar - Overlapping issue persists

--- a/frontend/src/components/Calendar.css
+++ b/frontend/src/components/Calendar.css
@@ -15,22 +15,8 @@
 .calendarBody {
     height: 88vh;
     border: 1px solid #575757;
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
     background-color: #242424;
-}
-
-.potentialOverlap {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-
-.potentialOverlap.isOverlapping {
-    flex: 0 0 15%;
-}
-
-.potentialOverlap.normal {
-    flex: 1;
 }
 
 .calendarWorkBubble:hover {
@@ -43,7 +29,7 @@
 
 .calendarWorkBubble {
     border: 1px solid #575757;
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
     background-color: #3b3b3b;
     color: white;
     text-align: left;
